# BezierTrajGenerator

./: CMakeLists.txt  README.md  package.xml
App/: Bezier_node.cpp
include/AstarPathPlanner/: AstarPathPlanner.h  AstarPathPlanner_backup.h
include/BezierTrajGenerator/: BezierTrajGenerator.h  Cube.h
include/CorridorGenerator/: CorridorGenerator.h
include/MapManager/: MapManager.h  MapManager_10_7.h  MapManager_backup.h  MapManager_bbackup.h  node.h
launch/: move_base.launch  nav_omni.launch
src/AstarPathPlanner/: AstarPathPlanner.cpp  AstarPathPlanner_backup.cpp
src/BezierTrajGenerator/: BezierTrajGenerator.cpp  BezierTrajGenerator_test.cpp
src/MapManager/: MapManager.cpp  MapManager_10_7.cpp  MapManager_backup.cpp
